Executing on host: /mnt/gnu/gcc-3.3/objdir/gcc/xgcc -B/mnt/gnu/gcc-3.3/objdir/gc c/ /mnt/gnu/gcc-3.3/gcc/gcc/testsuite/gcc.c-torture/execute/conversion.c -w -O 0 -fno-show-column -lm -o /mnt/gnu/gcc-3.3/objdir/gcc/testsuite/conversion.x 0 (timeout = 300) /usr/bin/ld: Unsatisfied symbols: __floatunsitf (first referenced in /var/tmp//ccCj8jFh.o) (code) collect2: ld returned 1 exit status compiler exited with status 1 output is: /usr/bin/ld: Unsatisfied symbols: __floatunsitf (first referenced in /var/tmp//ccCj8jFh.o) (code) collect2: ld returned 1 exit status FAIL: gcc.c-torture/execute/conversion.c compilation, -O0
The same error also causes the failure of gcc.dg/torture/fp-int-convert-long-double.c: Executing on host: /mnt/gnu/gcc-3.3/objdir/gcc/xgcc -B/mnt/gnu/gcc-3.3/objdir/gc c/ /mnt/gnu/gcc-3.3/gcc/gcc/testsuite/gcc.dg/torture/fp-int-convert-long-double. c -O0 -fno-show-column -lm -o ./fp-int-convert-long-double.exe (timeou t = 300) /usr/bin/ld: Unsatisfied symbols: __floatunsitf (first referenced in /var/tmp//ccztHixV.o) (code) collect2: ld returned 1 exit status compiler exited with status 1 output is: /usr/bin/ld: Unsatisfied symbols: __floatunsitf (first referenced in /var/tmp//ccztHixV.o) (code) collect2: ld returned 1 exit status FAIL: gcc.dg/torture/fp-int-convert-long-double.c -O0 (test for excess errors)
And gcc.dg/torture/fp-int-convert-timode.c.
This is a regression.
Subject: Re: New: FAIL: gcc.c-torture/execute/conversion.c compilation As explained in bug 24998, I can't test on PA at present but the fix is probably similar to that for IA64.
Subject: Re: [4.2 Regression] FAIL: gcc.c-torture/execute/conversion.c compilation > As explained in bug 24998, I can't test on PA at present but the fix is > probably similar to that for IA64. I'm testing a fix for the current reload problems on the PA. This should be installed tomorrow morning if all goes well. Would you test your IA64 fix on the PA? It looks like the same fix should work. Preapproved assuming testing is successful. Dave
Subject: Re: [4.2 Regression] FAIL: gcc.c-torture/execute/conversion.c compilation On Wed, 30 Nov 2005, dave at hiauly1 dot hia dot nrc dot ca wrote: > I'm testing a fix for the current reload problems on the PA. This should > be installed tomorrow morning if all goes well. > > Would you test your IA64 fix on the PA? It looks like the same fix should > work. Preapproved assuming testing is successful. I can't test on PA because of a non-working PA system, not because of any breakage that may have occurred on PA after the 18th.
Subject: Bug 25166 Author: danglin Date: Mon Dec 5 03:23:37 2005 New Revision: 108039 URL: http://gcc.gnu.org/viewcvs?root=gcc&view=rev&rev=108039 Log: PR target/25166 * pa/pa.c (pa_hpux_init_libfuncs): Add _U_Qfcnvxf_usgl_to_quad and _U_Qfcnvxf_udbl_to_quad to set of initialized libfuncs. * pa/quadlib.c (_U_Qfcnvxf_usgl_to_quad, _U_Qfcnvxf_udbl_to_quad): New functions. Modified: trunk/gcc/ChangeLog trunk/gcc/config/pa/pa.c trunk/gcc/config/pa/quadlib.c
Fixed by patch.