	PR target/25166 	* pa/pa.c (pa_hpux_init_libfuncs): Add _U_Qfcnvxf_usgl_to_quad and 	_U_Qfcnvxf_udbl_to_quad to set of initialized libfuncs. 	* pa/quadlib.c (_U_Qfcnvxf_usgl_to_quad, _U_Qfcnvxf_udbl_to_quad): New 	functions.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@108039 138bc75d-0d04-0410-961f-82ee72b054a4